--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "qs": "^6.10.1",
     "uuid": "^8.3.2",
     "winston": "^3.3.3",
-    "ws": "^8.2.0",
+    "ws": "^8.2.1",
     "yargs": "^17.1.1"
   },
   "devDependencies": {
@@ -59,6 +59,7 @@
     "@types/primus": "^7.3.5",
     "@types/puppeteer": "^5.4.4",
     "@types/uuid": "^8.3.1",
+    "@types/ws": "^7.4.7",
     "ioredis-mock": "^5.6.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
@@ -92,6 +93,7 @@
     "debug": "tsc && ts-node-dev --transpile-only --no-deps --inspect -- ./src/server ",
     "start": "node ./dist/server.js",
     "build": "rm -rf dist && ./node_modules/.bin/tsc --sourceMap false --declaration",
+    "watch": "rm -rf dist && ./node_modules/.bin/tsc --sourceMap false --declaration --watch",
     "docs": "typedoc --out docs --theme default src/index.ts",
     "lint": "prettier --check src __tests__",
     "pretty": "prettier --write src __tests__"
